apps/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: authority
---
apiVersion: v1
kind: Namespace
metadata:
  name: servicex
---
apiVersion: v1
kind: Namespace
metadata:
  name: servicey
