apps/istio-ingress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-ingress
  namespace: istio-system
spec:
  selector:
    app: istio-ingress
  ports:
  - name: status-port
    port: 15021
    targetPort: 15021
  - name: http2
    port: 80
    targetPort: 8080
  - name: https
    port: 443
    targetPort: 8443
  - name: tls
    port: 15012
    targetPort: 15012
  - name: mtls
    port: 15017
    targetPort: 15017
