apps/servicex-auth-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: servicex-auth-policy
  namespace: servicex
spec:
  selector:
    matchLabels:
      app: servicex
  action: ALLOW
  rules:
  - from:
    - source:
        requestPrincipals: ["testing@secure.istio.io/*"]
